# parity-common

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  build-targets-check.sh  build.rs  license-header  rustfmt.toml
.github/: dependabot.yml
benches/: bigint.rs
bounded-collections/: CHANGELOG.md  Cargo.toml  README.md
bounded-collections/src/: bounded_btree_map.rs  bounded_btree_set.rs  bounded_vec.rs  codec_utils.rs  const_int.rs  lib.rs  test.rs  weak_bounded_vec.rs
contract-address/: CHANGELOG.md  Cargo.toml  README.md
contract-address/src/: lib.rs
core-types/: Cargo.toml
ethbloom/: CHANGELOG.md  Cargo.toml
ethbloom/benches/: bloom.rs  unrolling.rs
ethbloom/src/: lib.rs
ethereum-types/: CHANGELOG.md  Cargo.toml
ethereum-types/src/: hash.rs  lib.rs  uint.rs
ethereum-types/tests/: serde.rs
examples/: modular.rs
fixed-hash/: CHANGELOG.md  Cargo.toml  README.md
fixed-hash/benches/: cmp.rs
fixed-hash/src/: hash.rs  lib.rs  tests.rs
hashdb/: Cargo.toml  README.md
hex-prefix-encoding/: Cargo.toml
keccak-hash/: CHANGELOG.md  Cargo.toml  README.md
keccak-hash/benches/: keccak_256.rs
keccak-hash/src/: lib.rs
kvdb/: CHANGELOG.md  Cargo.toml
kvdb-async/: Cargo.toml
kvdb-async/src/: lib.rs
kvdb-lmdb/: Cargo.toml
kvdb-lmdb/benches/: kvdb-lmdb.rs
kvdb-lmdb/src/: lib.rs
kvdb-memorydb/: CHANGELOG.md  Cargo.toml
kvdb-memorydb/src/: lib.rs
kvdb-rocksdb/: CHANGELOG.md  Cargo.toml
kvdb-rocksdb/benches/: bench_read_perf.rs  kvdb-rocksdb.rs
kvdb-rocksdb/examples/: memtest.rs
kvdb-rocksdb/src/: iter.rs  lib.rs  stats.rs
kvdb-shared-tests/: CHANGELOG.md  Cargo.toml
kvdb-shared-tests/src/: lib.rs
kvdb-sled/: Cargo.toml
kvdb-sled/src/: lib.rs
kvdb-test-utils/: Cargo.toml
kvdb-web/: CHANGELOG.md  Cargo.toml
kvdb-web/demo/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json
kvdb-web/demo/src/: lib.rs
kvdb-web/src/: error.rs  hex.rs  indexed_db.rs  lib.rs
kvdb-web/tests/: indexed_db.rs
kvdb/src/: io_stats.rs  iter.rs  lib.rs
mem/: Cargo.toml  README.md  get_malloc_size_src.sh  slim_malloc_size_of.patch
mem/src/: alloc.rs  allocators.rs  impls.rs  lib.rs  malloc_size.rs
memorydb/: Cargo.toml  README.md
memorydb/benches/: memdb.rs
memorydb/src/: lib.rs
no-std-tests/: Cargo.toml
no-std-tests/src/: main.rs
parity-bytes/: CHANGELOG.md  Cargo.toml  README.md
parity-bytes/src/: lib.rs
parity-crypto/: CHANGELOG.md  Cargo.toml  README.md
parity-crypto/benches/: asym.rs  bench.rs
parity-crypto/libsecp256k1/: Cargo.toml
parity-crypto/libsecp256k1/src/: lib.rs
parity-crypto/src/: aes.rs  aes_gcm.rs  blake2_f.rs  crypto.rs  digest.rs  error.rs  extended.rs  hmac.rs  hmac_alt.rs  keypair.rs  lib.rs  math.rs  pbkdf2.rs  pbkdf2_alt.rs  random.rs  scrypt.rs  secp256k1.rs  secp256k1_alt.rs  secret.rs  signature.rs
parity-crypto/src/hmac/: mod.rs  test.rs
parity-crypto/src/pbkdf2/: mod.rs  test.rs
parity-crypto/src/publickey/: ec_math_utils.rs  ecdh.rs  ecdsa_signature.rs  ecies.rs  error.rs  extended.rs  extended_keys.rs  keypair.rs  keypair_generator.rs  mod.rs  random.rs  secret.rs  secret_key.rs  signature.rs
parity-crypto/src/traits/: asym.rs  mod.rs
parity-crypto/test/: content  key1  left1_1  left1_2  pass1  result_128_cbc  result_128_ctr  right1_1  right1_2  salt1
parity-hash/: Cargo.toml
parity-hash/src/: lib.rs
parity-util-mem/: CHANGELOG.md  Cargo.toml  README.md  get_malloc_size_src.sh  slim_malloc_size_of.patch
parity-util-mem/derive/: CHANGELOG.md  Cargo.toml  lib.rs
parity-util-mem/src/: allocators.rs  ethereum_impls.rs  impls.rs  lib.rs  malloc_size.rs  memory_stats_jemalloc.rs  memory_stats_noop.rs  primitives_impls.rs  sizeof.rs
parity-util-mem/tests/: derive.rs
parity-wasm-compat/: Cargo.toml  README.md
parity-wasm-compat/src/: hook_print.rs  lib.rs  memmap.rs  snappy.rs  tempdir.rs  time.rs
parity-wasm-compat/src/fs/: fs_browser.rs  mod.rs
parity-wasm-compat/src/mpsc/: mod.rs  mpsc_browser_single.rs
parity-wasm-compat/src/rng/: mod.rs  rng_browser.rs
parity-wasm-compat/src/threadpool/: mod.rs  threadpool_browser_single.rs
path/: Cargo.toml
patricia_trie/: Cargo.toml
patricia_trie/benches/: trie.rs
patricia_trie/src/: fatdb.rs  fatdbmut.rs  lib.rs  lookup.rs  nibbleslice.rs  nibblevec.rs  node.rs  node_codec.rs  parity_node_codec.rs  recorder.rs  sectriedb.rs  sectriedbmut.rs  test_support.rs  triedb.rs  triedbmut.rs
plain_hasher/: CHANGELOG.md  Cargo.toml  README.md
plain_hasher/benches/: bench.rs
plain_hasher/src/: lib.rs
primitive-types/: CHANGELOG.md  Cargo.toml
primitive-types/impls/borsh/: CHANGELOG.md  Cargo.toml
primitive-types/impls/borsh/src/: lib.rs
primitive-types/impls/codec/: CHANGELOG.md  Cargo.toml
primitive-types/impls/codec/src/: lib.rs
primitive-types/impls/num-traits/: CHANGELOG.md  Cargo.toml
primitive-types/impls/num-traits/src/: lib.rs
primitive-types/impls/rlp/: CHANGELOG.md  Cargo.toml
primitive-types/impls/rlp/src/: lib.rs
primitive-types/impls/serde/: CHANGELOG.md  Cargo.toml
primitive-types/impls/serde/benches/: impl_serde.rs  input.rs
primitive-types/impls/serde/src/: lib.rs  serialize.rs
primitive-types/src/: error.rs  fp_conversion.rs  json_schema.rs  lib.rs
primitive-types/tests/: cast.rs  conversion.rs  fp_conversion.rs  num_traits.rs  scale_info.rs  type_metadata.rs
rlp/: CHANGELOG.md  Cargo.toml
rlp-derive/: CHANGELOG.md  Cargo.toml
rlp-derive/src/: de.rs  en.rs  lib.rs
rlp-derive/tests/: rlp.rs
rlp/benches/: rlp.rs
rlp/src/: error.rs  impls.rs  lib.rs  rlpin.rs  stream.rs  traits.rs
rlp/tests/: tests.rs
runtime/: CHANGELOG.MD  CHANGELOG.md  Cargo.toml  README.MD
runtime/examples/: simple.rs
runtime/sample/: Cargo.toml
runtime/sample/src/: main.rs
runtime/src/: lib.rs
substrate-trie/: Cargo.toml
substrate-trie/benches/: trie.rs  triehash.rs
substrate-trie/src/: codec_error.rs  codec_triestream.rs  codec_triestream_alt.rs  lib.rs  node_header.rs  parity_node_codec.rs  parity_node_codec_alt.rs
(+96 files in other folders)
