[workspace]
resolver = "2"
members = [
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"kvdb-shared-tests",
	"parity-bytes",
	"parity-crypto",
	"rlp",
	"rlp-derive",
	"uint",
	"parity-util-mem",
	"primitive-types",
	"ethereum-types",
	"ethbloom",
	"parity-util-mem/derive"
]
