[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
repository = "https://github.com/paritytech/parity-common"

[workspace]
resolver = "2"
members = [
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"kvdb-shared-tests",
	"parity-bytes",
	"rlp",
	"rlp-derive",
	"uint",
	"primitive-types",
	"bounded-collections",
	"ethereum-types",
	"ethbloom",
]

[workspace.dependencies]
serde_json = "1.0.41"
criterion = "0.8.1"
rand = { version = "0.8.0", default-features = false }
hex-literal = "1.0.0"
scale-info = { version = ">=1.0, <3", default-features = false }
quickcheck = "1"
rustc-hex = { version = "2.0.1", default-features = false }
static_assertions = "1.0.0"
arbitrary = "1.0"
tiny-keccak = "2.0"
crunchy = { version = "0.2.2", default-features = false }
serde = { version = "1.0.101", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
jam-codec = { version = "0.1.1", default-features = false }
log = { version = "0.4.17", default-features = false }
schemars = ">=0.8.12"
tempfile = "3.1.0"
smallvec = "1.0.0"
parking_lot = "0.12.0"
num_cpus = "1.10.1"
regex = "1.3.1"
rocksdb = { version = "0.24.0", default-features = false }
alloc_counter = "0.0.4"
sysinfo = "0.38.1"
ctrlc = "3.1.4"
chrono = "0.4"
num-traits = { version = "0.2", default-features = false }
integer-sqrt = "0.1"
bytes = { version = "1", default-features = false }
syn = "2.0.72"
quote = "1.0.2"
proc-macro2 = "1.0.8"
byteorder = { version = "1.4.2", default-features = false }
hex = { version = "0.4", default-features = false }
num-bigint = "0.4.0"
rug = { version = "1.6.0", default-features = false }
jsonschema = { version = "0.40", default-features = false }
serde_derive = "1.0.101"

ethbloom = { path = "./ethbloom", default-features = false }
ethereum-types = { path = "./ethereum-types" }
fixed-hash = { path = "./fixed-hash", default-features = false }
uint = { path = "./uint", default-features = false }
uint-crate = { path = "./uint", package = "uint", default-features = false }
primitive-types = { path = "./primitive-types", default-features = false }
impl-codec = { path = "./primitive-types/impls/codec", default-features = false }
impl-num-traits = { path = "./primitive-types/impls/num-traits", default-features = false }
impl-rlp = { path = "./primitive-types/impls/rlp", default-features = false }
impl-serde = { path = "./primitive-types/impls/serde", default-features = false }
kvdb = { path = "./kvdb", version = "0.13" }
kvdb-shared-tests = { path = "./kvdb-shared-tests" }
keccak-hash = { path = "./keccak-hash" }
rlp = { path = "./rlp" }
rlp-derive = { path = "./rlp-derive" }
