[package]
name = "bounded-collections"
version = "0.2.3"
description = "Bounded types and their supporting traits"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
json-schema = ["dep:schemars"]
std = [
    "log/std",
    "codec/std",
    "scale-info/std",
    "serde/std",
]
