[package]
name = "bounded-collections"
version = "0.2.4"
description = "Bounded types and their supporting traits"
readme = "README.md"
rust-version = "1.79.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"], optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
log = { workspace = true }
schemars = { workspace = true, optional = true }
jam-codec = { version = "0.1.0", default-features = false, features = ["derive","max-encoded-len"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
json-schema = ["dep:schemars"]
std = [
    "log/std",
    "jam-codec/std",
    "scale-codec/std",
    "scale-info/std",
    "serde/std",
]
scale-codec = [ "scale-info" ]
