[package]
name = "bounded-collections"
version = "0.3.2"
description = "Bounded types and their supporting traits"
readme = "README.md"
rust-version = "1.79.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"], optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
jam-codec = { workspace = true, features = ["derive","max-encoded-len"], optional = true }
log = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
json-schema = ["dep:schemars"]
std = [
    "log/std",
    "jam-codec?/std",
    "scale-codec?/std",
    "scale-info?/std",
    "serde?/std",
]
scale-codec = [ "dep:scale-codec", "scale-info" ]
