[package]
name = "ethbloom"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum bloom filter"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ethbloom"
homepage = "https://github.com/paritytech/parity-common"
repository = "https://github.com/paritytech/parity-common"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
crunchy = { version = "0.2.2", default-features = false, features = ["limit_256"] }
fixed-hash = { path = "../fixed-hash", version = "0.8", default-features = false }
impl-serde = { path = "../primitive-types/impls/serde", version = "0.4", default-features = false, optional = true }
impl-rlp = { path = "../primitive-types/impls/rlp", version = "0.3", default-features = false, optional = true }
impl-codec = { version = "0.6.0", path = "../primitive-types/impls/codec", default-features = false, optional = true }
scale-info = { version = ">=1.0, <3", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.0"
hex-literal = "0.4.1"

[features]
default = ["std", "rlp", "serialize", "rustc-hex"]
std = ["fixed-hash/std", "crunchy/std"]
serialize = ["impl-serde"]
rustc-hex = ["fixed-hash/rustc-hex"]
arbitrary = ["fixed-hash/arbitrary"]
rlp = ["impl-rlp"]
codec = ["impl-codec", "scale-info"]

[[bench]]
name = "bloom"
path = "benches/bloom.rs"
harness = false

[[bench]]
name = "unrolling"
path = "benches/unrolling.rs"
harness = false
