[package]
name = "ethbloom"
version = "0.14.1"
description = "Ethereum bloom filter"
rust-version = "1.56.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tiny-keccak = { workspace = true, features = ["keccak"] }
crunchy = { workspace = true, features = ["limit_256"] }
fixed-hash = { workspace = true }
impl-serde = { workspace = true, optional = true }
impl-rlp = { workspace = true, optional = true }
impl-codec = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true, default-features = true }
hex-literal = { workspace = true }

[features]
default = ["std", "rlp", "serialize", "rustc-hex"]
std = ["fixed-hash/std", "crunchy/std"]
serialize = ["impl-serde"]
rustc-hex = ["fixed-hash/rustc-hex"]
arbitrary = ["fixed-hash/arbitrary"]
rlp = ["impl-rlp"]
codec = ["impl-codec", "scale-info"]

[[bench]]
name = "bloom"
path = "benches/bloom.rs"
harness = false

[[bench]]
name = "unrolling"
path = "benches/unrolling.rs"
harness = false
