[package]
name = "ethereum-types"
version = "0.16.0"
description = "Ethereum types"
rust-version = "1.60.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethbloom = { workspace = true, optional = true }
fixed-hash = { workspace = true, features = ["rustc-hex"] }
uint-crate = { workspace = true }
primitive-types = { workspace = true, features = ["rustc-hex"] }
impl-serde = { workspace = true, optional = true }
impl-rlp = { workspace = true, optional = true }
impl-codec = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std", "ethbloom", "rlp", "serialize"]
std = ["uint-crate/std", "fixed-hash/std", "ethbloom?/std", "primitive-types/std"]
serialize = ["impl-serde", "primitive-types/serde_no_std", "ethbloom/serialize"]
arbitrary = ["ethbloom/arbitrary", "fixed-hash/arbitrary", "uint-crate/arbitrary"]
rlp = ["impl-rlp", "ethbloom/rlp", "primitive-types/rlp"]
codec = ["impl-codec", "ethbloom/codec", "scale-info", "primitive-types/scale-info"]
num-traits = ["primitive-types/num-traits"]
rand = ["primitive-types/rand"]
