[package]
name = "fixed-hash"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
repository = "https://github.com/paritytech/parity-common"
description = "Macros to define custom fixed-size hash types"
documentation = "https://docs.rs/fixed-hash/"
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[package.metadata.docs.rs]
features = ["quickcheck", "api-dummy"]

[dependencies]
arbitrary = { version = "1.0", optional = true }
array-bytes = { version = "6.0", optional = true }
byteorder = { version = "1.4.2", optional = true, default-features = false }
quickcheck = { version = "1", optional = true }
rand = { version = "0.8.0", optional = true, default-features = false }
static_assertions = "1.0.0"

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8.0", default-features = false, features = ["std_rng"] }
rand_xorshift = "0.3.0"

[features]
default = [
	"std",
	"array-bytes",
	"byteorder",
	"rand",
]
std = [
	"byteorder/std",
	"rand/std",
]

api-dummy = [] # Feature used by docs.rs to display documentation of hash types

[[bench]]
name = "cmp"
harness = false
