[package]
name = "fixed-hash"
version = "0.8.0"
description = "Macros to define custom fixed-size hash types"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
features = ["quickcheck", "api-dummy"]

[dependencies]
quickcheck = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rustc-hex = { workspace = true, optional = true }
static_assertions = { workspace = true }
arbitrary = { workspace = true, optional = true }

[dev-dependencies]
rand_xorshift = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true, default-features = false, features = ["std_rng"] }

[features]
default = ["std", "rand", "rustc-hex"]
std = ["rustc-hex/std", "rand?/std"]

api-dummy = [] # Feature used by docs.rs to display documentation of hash types

[[bench]]
name = "cmp"
harness = false
