[package]
name = "keccak-hash"
version = "0.11.0"
description = "`keccak-hash` is a set of utility functions to facilitate working with Keccak hashes (256/512 bits long)."
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
primitive-types = { path = "../primitive-types", version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.5.1"

[features]
default = ["std"]
std = []

[[bench]]
name = "keccak_256"
harness = false
