[package]
name = "keccak-hash"
version = "0.11.0"
description = "`keccak-hash` is a set of utility functions to facilitate working with Keccak hashes (256/512 bits long)."
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
primitive-types = { path = "../primitive-types", version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.5.1"

[features]
default = ["std"]
std = []

[[bench]]
name = "keccak_256"
harness = false
