[package]
name = "keccak-hash"
version = "0.11.0"
description = "`keccak-hash` is a set of utility functions to facilitate working with Keccak hashes (256/512 bits long)."
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tiny-keccak = { workspace = true, features = ["keccak"] }
primitive-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[features]
default = ["std"]
std = []

[[bench]]
name = "keccak_256"
harness = false
