[package]
name = "kvdb-lmdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "kvdb implementation backed by LMDB"
license = "GPL-3.0"
edition = "2018"

[dependencies]
lmdb = { version = "0.11", package = "lmdb-rkv" }
kvdb = { version = "0.1", path = "../kvdb" }
log = "0.4"
owning_ref = "0.4.0"
