[package]
name = "kvdb-memorydb"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
parking_lot = "0.12.0"
kvdb = { version = "0.13", path = "../kvdb" }

[dev-dependencies]
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.11" }

[features]
default = []
