[package]
name = "kvdb-memorydb"
version = "0.13.0"
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parking_lot = "0.12.0"
kvdb = { version = "0.13", path = "../kvdb" }

[dev-dependencies]
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.11" }

[features]
default = []
