[package]
name = "kvdb-memorydb"
version = "0.13.0"
description = "A key-value in-memory database that implements the `KeyValueDB` trait"
rust-version = "1.56.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parking_lot = { workspace = true }
kvdb = { workspace = true }

[dev-dependencies]
kvdb-shared-tests = { workspace = true }

[features]
default = []
