[package]
name = "kvdb-rocksdb"
version = "0.19.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "kvdb implementation backed by RocksDB"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[[bench]]
name = "bench_read_perf"
harness = false

[dependencies]
smallvec = "1.0.0"
kvdb = { path = "../kvdb", version = "0.13" }
num_cpus = "1.10.1"
parking_lot = "0.12.0"
regex = "1.3.1"

# OpenBSD and MSVC are unteested and shouldn't enable jemalloc:
# https://github.com/tikv/jemallocator/blob/52de4257fab3e770f73d5174c12a095b49572fba/jemalloc-sys/build.rs#L26-L27
[target.'cfg(any(target_os = "openbsd", target_env = "msvc"))'.dependencies.rocksdb]
default-features = false
features = ["snappy"]
version = "0.21"

[target.'cfg(not(any(target_os = "openbsd", target_env = "msvc")))'.dependencies.rocksdb]
default-features = false
features = ["snappy", "jemalloc"]
version = "0.21"

[dev-dependencies]
alloc_counter = "0.0.4"
criterion = "0.5"
ethereum-types = { path = "../ethereum-types" }
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.11" }
rand = "0.8.0"
tempfile = "3.1.0"
keccak-hash = { path = "../keccak-hash" }
sysinfo = "0.29.0"
ctrlc = "3.1.4"
chrono = "0.4"
