[package]
name = "kvdb-rocksdb"
version = "0.19.0"
description = "kvdb implementation backed by RocksDB"
rust-version = "1.56.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bench]]
name = "bench_read_perf"
harness = false

[dependencies]
kvdb = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }

# OpenBSD and MSVC are unteested and shouldn't enable jemalloc:
# https://github.com/tikv/jemallocator/blob/52de4257fab3e770f73d5174c12a095b49572fba/jemalloc-sys/build.rs#L26-L27
[target.'cfg(any(target_os = "openbsd", target_env = "msvc"))'.dependencies]
rocksdb = { workspace = true, features = ["snappy"] }

[target.'cfg(not(any(target_os = "openbsd", target_env = "msvc")))'.dependencies]
rocksdb = { workspace = true, features = ["snappy", "jemalloc"] }

[dev-dependencies]
alloc_counter = { workspace = true }
criterion = { workspace = true }
ethereum-types = { workspace = true, features = ["rand"] }
kvdb-shared-tests = { workspace = true }
rand = { workspace = true, default-features = true }
tempfile = { workspace = true }
keccak-hash = { workspace = true }
sysinfo = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }
