[package]
name = "kvdb-rocksdb"
version = "0.20.2"
description = "kvdb implementation backed by RocksDB"
rust-version = "1.71.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bench]]
name = "bench_read_perf"
harness = false

[dependencies]
kvdb = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rocksdb = { workspace = true, default-features = false, features = ["snappy"] }

[dev-dependencies]
alloc_counter = { workspace = true }
criterion = { workspace = true }
ethereum-types = { workspace = true, features = ["rand"] }
kvdb-shared-tests = { workspace = true }
rand = { workspace = true, default-features = true }
tempfile = { workspace = true }
keccak-hash = { workspace = true }
sysinfo = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }

[features]
default  = []
jemalloc = ["rocksdb/jemalloc"]