[package]
name = "kvdb-shared-tests"
version = "0.11.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"
description = "Shared tests for kvdb functionality, to be executed against actual implementations"
license = "MIT OR Apache-2.0"

[dependencies]
kvdb = { path = "../kvdb", version = "0.13" }
