[package]
name = "kvdb-shared-tests"
version = "0.11.0"
description = "Shared tests for kvdb functionality, to be executed against actual implementations"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kvdb = { path = "../kvdb", version = "0.13" }
