[package]
name = "kvdb-shared-tests"
version = "0.11.0"
description = "Shared tests for kvdb functionality, to be executed against actual implementations"
rust-version = "1.56.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kvdb = { workspace = true }
