[package]
name = "kvdb-sled"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value database backed by sled"
documentation = "https://docs.rs/kvdb-sled/"
license = "GPL-3.0"
edition = "2018"

[dependencies]
sled = "0.31.0"
kvdb = { version = "0.4", path = "../kvdb" }
log = "0.4.8"
parity-util-mem = { version = "0.5", default-features = false, path = "../parity-util-mem" }

[dev-dependencies]
tempdir = "0.3.7"
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.2" }
