[package]
name = "kvdb-web"
version = "0.7.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value database for use in browsers"
documentation = "https://docs.rs/kvdb-web/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.54"
js-sys = "0.3.31"
kvdb = { version = "0.7", path = "../kvdb" }
kvdb-memorydb = { version = "0.7", path = "../kvdb-memorydb" }
futures = "0.3"
log = "0.4.8"
send_wrapper = "0.5.0"
parity-util-mem = { path = "../parity-util-mem", version = "0.7", default-features = false }

[dependencies.web-sys]
version = "0.3.31"
features = [
	'console',
	'Window',
	'IdbFactory',
	'IdbDatabase',
	'IdbTransaction',
	'IdbTransactionMode',
	'IdbOpenDbRequest',
	'IdbRequest',
	'IdbObjectStore',
	'Event',
	'EventTarget',
	'IdbCursor',
	'IdbCursorWithValue',
	'IdbKeyRange',
	'DomStringList',
]

[dev-dependencies]
console_log = "0.2.0"
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.5" }
wasm-bindgen-test = "0.3.4"
wasm-bindgen-futures = "0.4.4"
