[package]
name = "kvdb-web"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value database for use in browsers"
documentation = "https://docs.rs/kvdb-web/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"
kvdb = { version = "0.9", path = "../kvdb" }
kvdb-memorydb = { version = "0.9", path = "../kvdb-memorydb" }
futures = "0.3.8"
log = "0.4.11"
send_wrapper = "0.5.0"
parity-util-mem = { path = "../parity-util-mem", version = "0.9", default-features = false }
# TODO: https://github.com/paritytech/parity-common/issues/479
# This is hack to enable `wasm-bindgen` feature of `parking_lot` in other dependencies.
# Thus, it's not direct dependency and do not remove until a proper fix exists.
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.46"
features = [
	'console',
	'Window',
	'IdbFactory',
	'IdbDatabase',
	'IdbTransaction',
	'IdbTransactionMode',
	'IdbOpenDbRequest',
	'IdbRequest',
	'IdbObjectStore',
	'Event',
	'EventTarget',
	'IdbCursor',
	'IdbCursorWithValue',
	'IdbKeyRange',
	'DomStringList',
]

[dev-dependencies]
console_log = "0.2.0"
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.7" }
wasm-bindgen-test = "0.3.19"
wasm-bindgen-futures = "0.4.19"
