[package]
name = "kvdb"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Generic key-value trait"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
smallvec = "1.0.0"
