[package]
name = "memorydb"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "in-memory implementation of hashdb"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[dependencies]
parity-util-mem = { git = "https://github.com/cheme/parity-common", branch = "mem-tools2" }
hashdb = { version = "0.3.0" }
plain_hasher = { version = "0.2", path = "../plain_hasher", default-features = false }
rlp = { version = "0.3.0", path = "../rlp", default-features = false }

[dev-dependencies]
tiny-keccak = "1.4.2"
ethereum-types = "0.4"
keccak-hasher = { version = "*" } # ,  path = "../test-support/keccak-hasher" }
keccak-hash = { version = "*" } #, path = "../keccak-hash" }
