[package]
name = "memorydb"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "in-memory implementation of hashdb"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[dependencies]
parity-util-mem = { version = "0.1", path = "../parity-util-mem" }
hashdb = { version = "0.3.0", path = "../hashdb" }
plain_hasher = { version = "0.2", path = "../plain_hasher", default-features = false }
rlp = { version = "0.3.0", path = "../rlp", default-features = false }

[dev-dependencies]
tiny-keccak = "1.4.2"
ethereum-types = "0.4"
keccak-hasher = { version = "*" } # ,  path = "../test-support/keccak-hasher" }
keccak-hash = { version = "*" } #, path = "../keccak-hash" }
